Fix text-align.

--- a/src/components/AboutMe/styles/index.module.css
+++ b/src/components/AboutMe/styles/index.module.css
@@ -20,4 +20,5 @@
 .introduction {
   font-size: 16px;
   line-height: 28px;
+  text-align: center;
 }
